# rage

./: .arcconfig  .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  Marrakesh.mrk  README  TODO  configure.ac  meson.build  rage.spec.in
data/: Makefile.am
data/desktop/: Makefile.am  Makefile.mk  meson.build  rage.desktop
data/icons/: Makefile.am  Makefile.mk  meson.build
data/themes/: Makefile.am  Makefile.mk  default.edc  meson.build  perms.sh
data/themes/images/: Makefile.am  Makefile.mk
data/themes/orig/: icons.svgz  speaker-base.svgz
pkgbuild/: PKGBUILD.in
