MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
pm_fill.png \
pm_overlay.png \
pm_shadow.png \
glow_exclam.png \
icon_eject.png \
icon_forward.png \
icon_mute.png \
icon_next.png \
icon_pause.png \
icon_play.png \
icon_prev.png \
icon_rewind.png \
icon_stop.png \
icon_volume.png \
icon_refresh.png \
icon_arrow_right.png \
horizontal_separated_bar_small_glow.png \
vgrad_shadow_bi.png \
pos_indicator.png \
icon_next2.png \
icon_prev2.png \
icon_play2.png \
icon_pause2.png \
icon_spanner.png \
icon_spanner2.png \
icon_volume2.png \
pos_indicator_big.png \
bevel_dark_out.png \
bg_bevel.png \
win_glow.png \
win_shadow.png \
bg_glint.png \
bg_shine.png \
tv-bg.png \
tv-over.png \
r-0.png \
r-1.png \
r-2.png \
r-3.png \
r-4.png

