MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
dimmer.png \
icon_arrow_right.png \
icon_close.png \
icon_eject.png \
icon_exclamation.png \
icon_forward.png \
icon_fullscreen.png \
icon_mute.png \
icon_next.png \
icon_pause.png \
icon_play.png \
icon_prev.png \
icon_refresh.png \
icon_rewind.png \
icon_spanner.png \
icon_stop.png \
icon_unfullscreen.png \
icon_volume.png \
pm_fill.png \
r-0.png \
r-1.png \
r-2.png \
r-3.png \
r-4.png \
shadow_circle_horiz.png \
shadow_circle_vert.png \
speaker-base.png \
speaker-over.png \
speaker-shadow.png \
tv-bg.png \
tv-over.png \
vg1.png \
vg2.png \
win_shadow.png
